# april-core

./: Cargo.toml  LICENSE  README.md
src/: assistant.rs  error.rs  lib.rs  model.rs
src/model/: anthropic.rs  bedrock.rs
