[package]
name = "april-core"
version = "0.1.0"
authors = ["Tanmoy Paul"]
description = "April core components"
readme = "README.md"
repository = "https://github.com/paultanmoy/april-core.git"
license = "GPLv3"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
base64 = "0.22.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tracing = "0.1.40"
