[package]
name = "april-core"
version = "0.1.0"
authors = ["Tanmoy Paul"]
description = "April core components"
readme = "README.md"
repository = "https://github.com/paultanmoy/april-core.git"
license = "GPLv3"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"], optional = true }
aws-credential-types = { version = "1.2.1", optional = true }
aws-sdk-bedrockruntime = { version = "1.48.0", features = ["behavior-version-latest"], optional = true }
base64 = "0.22.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = "1.39.3"
tracing = "0.1.40"
typetag = "0.2.18"

[features]
default = []
aws-bedrock = ["dep:aws-config", "dep:aws-credential-types", "dep:aws-sdk-bedrockruntime"]
